--- a/.github/workflows/auto-sync-greasemonkey.yml
+++ b/.github/workflows/auto-sync-greasemonkey.yml
@@ -2,14 +2,13 @@ name: Sync greasemonkey to (adamlui/userscripts/chatgpt || adamlui/chatgpt-users
 
 on:
   push:
-    branches:
-      - main
+    branches: [ master, main ]
     paths:
       - 'greasemonkey/**'
-    if: 'github.event.head_commit.committer.username != "auto-sync-bot"'
 
 jobs:
-  sync-chatgpt-auto-refresh:
+  build:
+    if: github.event.commits[0].committer.username != 'auto-sync-bot'
     runs-on: ubuntu-latest
     steps:
 
