--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -1,4 +1,4 @@
-name: Sync (/ to adamlui/chatgpt-addons/chatgpt-auto-refresh/) && (/greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-refresh/)
+name: Sync (/ to adamlui/chatgpt-apps/chatgpt-auto-refresh/) && (/greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-refresh/)
 
 on:
   push:
@@ -19,12 +19,12 @@ jobs:
           repository: adamlui/chatgpt-auto-refresh
           path: adamlui/chatgpt-auto-refresh
 
-      - name: Checkout adamlui/chatgpt-addons
+      - name: Checkout adamlui/chatgpt-apps
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.REPO_SYNC_PAT }}
-          repository: adamlui/chatgpt-addons
-          path: adamlui/chatgpt-addons
+          repository: adamlui/chatgpt-apps
+          path: adamlui/chatgpt-apps
 
       - name: Checkout adamlui/userscripts
         uses: actions/checkout@v2
@@ -41,8 +41,8 @@ jobs:
             cp -f "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/greasemonkey/README.md" "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/README.md"
           fi
 
-      - name: Sync / to adamlui/chatgpt-addons/chatgpt-auto-refresh/
-        run: rsync -avh --exclude={'.git','.github'} ${{ github.workspace }}/adamlui/chatgpt-auto-refresh/ ${{ github.workspace }}/adamlui/chatgpt-addons/chatgpt-auto-refresh/
+      - name: Sync / to adamlui/chatgpt-apps/chatgpt-auto-refresh/
+        run: rsync -avh --exclude={'.git','.github'} ${{ github.workspace }}/adamlui/chatgpt-auto-refresh/ ${{ github.workspace }}/adamlui/chatgpt-apps/chatgpt-auto-refresh/
 
       - name: Sync /greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-refresh/
         run: rsync -avh --delete ${{ github.workspace }}/adamlui/chatgpt-auto-refresh/greasemonkey/ ${{ github.workspace }}/adamlui/userscripts/chatgpt/chatgpt-auto-refresh/
@@ -57,7 +57,7 @@ jobs:
           file_pattern: '*'
           repository: adamlui/chatgpt-auto-refresh
 
-      - name: Push to adamlui/chatgpt-addons
+      - name: Push to adamlui/chatgpt-apps
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           push_options: '--force'
@@ -65,7 +65,7 @@ jobs:
           commit_user_email: auto-sync@chatgptevo.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]'
           file_pattern: 'chatgpt-auto-refresh/*'
-          repository: adamlui/chatgpt-addons
+          repository: adamlui/chatgpt-apps
 
       - name: Push to adamlui/userscripts
         uses: stefanzweifel/git-auto-commit-action@v4
