--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -46,10 +46,10 @@ jobs:
           done
 
       - name: Sync / to adamlui/chatgpt-apps/chatgpt-auto-refresh/
-        run: rsync -avh --delete --exclude={'.git','.github'} ${{ github.workspace }}/adamlui/chatgpt-auto-refresh/ ${{ github.workspace }}/adamlui/chatgpt-apps/chatgpt-auto-refresh/
+        run: rsync -avhr --delete --exclude={'.git','.github'} ${{ github.workspace }}/adamlui/chatgpt-auto-refresh/ ${{ github.workspace }}/adamlui/chatgpt-apps/chatgpt-auto-refresh/
 
       - name: Sync /greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-refresh/
-        run: rsync -avh --delete ${{ github.workspace }}/adamlui/chatgpt-auto-refresh/greasemonkey/ ${{ github.workspace }}/adamlui/userscripts/chatgpt/chatgpt-auto-refresh/
+        run: rsync -avhr --delete ${{ github.workspace }}/adamlui/chatgpt-auto-refresh/greasemonkey/ ${{ github.workspace }}/adamlui/userscripts/chatgpt/chatgpt-auto-refresh/
 
       - name: Push to adamlui/chatgpt-auto-refresh
         uses: stefanzweifel/git-auto-commit-action@v4
@@ -58,7 +58,7 @@ jobs:
           add_options: '--all'
           commit_user_email: auto-sync@chatgptevo.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]'
-          file_pattern: '*'
+          file_pattern: '**'
           repository: adamlui/chatgpt-auto-refresh
 
       - name: Push to adamlui/chatgpt-apps
@@ -68,7 +68,7 @@ jobs:
           add_options: '--all'
           commit_user_email: auto-sync@chatgptevo.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]'
-          file_pattern: 'chatgpt-auto-refresh/*'
+          file_pattern: 'chatgpt-auto-refresh/**'
           repository: adamlui/chatgpt-apps
 
       - name: Push to adamlui/userscripts
@@ -78,5 +78,5 @@ jobs:
           add_options: '--all'
           commit_user_email: auto-sync@chatgptevo.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]'
-          file_pattern: 'chatgpt/chatgpt-auto-refresh/*'
+          file_pattern: 'chatgpt/chatgpt-auto-refresh/**'
           repository: adamlui/userscripts
