Replaced `stat` comparison w/ `git diff`

--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -38,9 +38,10 @@ jobs:
           shopt -s globstar
           for file in "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/docs/"**/*.md; do
             relative_path=${file#"${{ github.workspace }}/adamlui/chatgpt-auto-refresh/docs/"}
-            if [[ "$(stat -c %y "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/docs/$relative_path")" > "$(stat -c %y "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/greasemonkey/docs/$relative_path")" ]]; then
+            echo "Relative Path: $relative_path"
+            if [[ $(git diff --name-only "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/docs/$relative_path") ]]; then
               cp -f "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/docs/$relative_path" "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/greasemonkey/docs/$relative_path"
-            elif [[ "$(stat -c %y "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/greasemonkey/docs/$relative_path")" > "$(stat -c %y "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/docs/$relative_path")" ]]; then
+            elif [[ $(git diff --name-only "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/greasemonkey/docs/$relative_path") ]]; then
               cp -f "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/greasemonkey/docs/$relative_path" "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/docs/$relative_path"
             fi
           done
