Updated doc sync

--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -18,6 +18,7 @@ jobs:
           token: ${{ secrets.REPO_SYNC_PAT }}
           repository: adamlui/chatgpt-auto-refresh
           path: adamlui/chatgpt-auto-refresh
+          fetch-depth: 0
 
       - name: Checkout adamlui/chatgpt-apps
         uses: actions/checkout@v2
@@ -38,27 +39,18 @@ jobs:
           shopt -s globstar
           for file in "${{ github.workspace }}/adamlui/chatgpt-auto-refresh/docs/"**/*.md; do
             relative_path=${file#"${{ github.workspace }}/adamlui/chatgpt-auto-refresh/docs/"}
-            root_file="${{ github.workspace }}/adamlui/chatgpt-auto-refresh/docs/$relative_path"
-            gm_file="${{ github.workspace }}/adamlui/chatgpt-auto-refresh/greasemonkey/docs/$relative_path"
+            root_doc="${{ github.workspace }}/adamlui/chatgpt-auto-refresh/docs/$relative_path"
+            gm_doc="${{ github.workspace }}/adamlui/chatgpt-auto-refresh/greasemonkey/docs/$relative_path"
 
-            git diff --quiet "$root_file" "$gm_file"
-            result=$?
+            root_modified=$(git log -1 --format="%ct" -- "$root_doc")
+            gm_modified=$(git log -1 --format="%ct" -- "$gm_doc")
 
-            if (( result != 0 )); then
-              git log -1 --format="%ct" -- "$root_file" > root_modified.txt
-              git log -1 --format="%ct" -- "$gm_file" > gm_modified.txt
-
-              root_modified=$(cat root_modified.txt)
-              gm_modified=$(cat gm_modified.txt)
-
-              if (( root_modified > gm_modified )); then
-                cp -f "$root_file" "$gm_file"
-              else
-                cp -f "$gm_file" "$root_file"
-              fi
+            if (( root_modified > gm_modified )); then
+              cp -f "$root_doc" "$gm_doc"
+            else
+              cp -f "$gm_doc" "$root_doc"
             fi
           done
-
 
       - name: Sync / to adamlui/chatgpt-apps/chatgpt-auto-refresh/
         run: rsync -avhr --delete --exclude={'.*','package*json'} ${{ github.workspace }}/adamlui/chatgpt-auto-refresh/ ${{ github.workspace }}/adamlui/chatgpt-apps/chatgpt-auto-refresh/
