--- a/.github/workflows/auto-sync-eslintrc.js.yml
+++ b/.github/workflows/auto-sync-eslintrc.js.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    if: github.event.commits[0].committer.username != 'auto-sync-bot'
+    if: github.event.commits[0].committer.username != 'kudo-sync-bot'
     runs-on: ubuntu-latest
     steps:
 
@@ -113,7 +113,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]'
           file_pattern: '.eslintrc.js'
           repository: adamlui/userscripts
@@ -123,7 +123,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]'
           file_pattern: '.eslintrc.js'
           repository: adamlui/chatgpt-apps
@@ -133,7 +133,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]'
           file_pattern: '.eslintrc.js'
           repository: adamlui/autoclear-chatgpt-history
@@ -143,7 +143,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]'
           file_pattern: '.eslintrc.js'
           repository: adamlui/chatgpt-auto-continue
@@ -153,7 +153,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]'
           file_pattern: '.eslintrc.js'
           repository: adamlui/chatgpt-infinity
@@ -163,7 +163,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]'
           file_pattern: '.eslintrc.js'
           repository: adamlui/chatgpt-widescreen
@@ -173,7 +173,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]'
           file_pattern: '.eslintrc.js'
           repository: adamlui/youtube-classic
@@ -183,7 +183,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]'
           file_pattern: '.eslintrc.js'
           repository: kudoai/bravegpt
@@ -193,7 +193,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]'
           file_pattern: '.eslintrc.js'
           repository: kudoai/duckduckgpt
