Added license to doc sync, shortened paths, renamed vars, added `elif`

--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -38,14 +38,22 @@ jobs:
         run: |
           shopt -s globstar
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-refresh
-          for file in docs/**/*.md; do
+
+          # Sync LICENSE.md
+          root_license_modified=$(git log -1 --format="%ct" -- "LICENSE.md")
+          gm_license_modified=$(git log -1 --format="%ct" -- "greasemonkey/LICENSE.md")
+          if (( root_license_modified > gm_license_modified )) ; then cp -f "LICENSE.md" "greasemonkey/LICENSE.md"
+          elif (( gm_license_modified > root_license_modified )) ; then cp -f "greasemonkey/LICENSE.md" "LICENSE.md" ; fi
+
+          # Sync other docs
+          for file in docs/**/*.md ; do
             relative_path=${file#"docs/"}
-            root_doc="${{ github.workspace }}/adamlui/chatgpt-auto-refresh/docs/$relative_path"
-            gm_doc="${{ github.workspace }}/adamlui/chatgpt-auto-refresh/greasemonkey/docs/$relative_path"
-            root_modified=$(git log -1 --format="%ct" -- "$root_doc")
-            gm_modified=$(git log -1 --format="%ct" -- "$gm_doc")
-            if (( root_modified > gm_modified )) ; then cp -f "$root_doc" "$gm_doc"
-            else cp -f "$gm_doc" "$root_doc" ; fi
+            root_doc="docs/$relative_path"
+            root_doc_modified=$(git log -1 --format="%ct" -- "$root_doc")
+            gm_doc="greasemonkey/docs/$relative_path"
+            gm_doc_modified=$(git log -1 --format="%ct" -- "$gm_doc")
+            if (( root_doc_modified > gm_doc_modified )) ; then cp -f "$root_doc" "$gm_doc"
+            elif (( gm_doc_modified > root_doc_modified )) ; then cp -f "$gm_doc" "$root_doc" ; fi
           done
 
       - name: Sync / to adamlui/chatgpt-apps/chatgpt-auto-refresh/
