Shortened `on.push` param values

--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -2,9 +2,8 @@ name: Sync (/ to adamlui/chatgpt-apps/chatgpt-auto-refresh/) && (/greasemonkey/ 
 
 on:
   push:
-    branches: [ master, main ]
-    paths:
-      - '**'
+    branches: main
+    paths: '**'
 
 jobs:
   build:
