--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "eslint": "^8.56.0",
+    "eslint-plugin-userscripts": "^0.5.2",
     "husky": "^9.0.10"
   },
   "scripts": {
