--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "eslint": "^8.56.0",
     "eslint-plugin-json-schema-validator": "^4.8.3",
     "eslint-plugin-userscripts": "^0.5.2",
+    "eslint-plugin-yml": "^1.12.2",
     "husky": "^9.0.10"
   },
   "scripts": {
-    "lint": "eslint . --ext js,json --cache"
+    "lint": "eslint . --ext js,json,yml --cache"
   }
 }
