Excluded new ESLint flat config file from `rsync` to adamlui/chatgpt-apps

--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -72,7 +72,7 @@ jobs:
 
       - name: Sync / to adamlui/chatgpt-apps/chatgpt-auto-refresh/
         run: |
-          rsync -avhr --delete --exclude={'.*','package*json'} \
+          rsync -avhr --delete --exclude={'.*','eslint*','package*json'} \
             ${{ github.workspace }}/adamlui/chatgpt-auto-refresh/ \
             ${{ github.workspace }}/adamlui/chatgpt-apps/chatgpt-auto-refresh/
 
