Escaped backcticks in commit msgs

--- a/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
+++ b/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
@@ -169,7 +169,7 @@ jobs:
           git config --global user.name "kudo-sync-bot"
           git config --global user.email "auto-sync@kudoai.com"
           git add .
-          git commit -n -m "${{ steps.update-shields.outputs.commit_msg }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]" || true
+          git commit -n -m "${{ steps.update-shields.outputs.commit_msg }} ↞ [auto-sync from \`adamlui/chatgpt-auto-refresh\`]" || true
           git push
 
       - name: Push changes to adamlui/userscripts
@@ -178,5 +178,5 @@ jobs:
           git config --global user.name "kudo-sync-bot"
           git config --global user.email "auto-sync@kudoai.com"
           git add .
-          git commit -n -m "${{ steps.update-shields.outputs.commit_msg }} ↞ [auto-sync from `adamlui/chatgpt-auto-refresh`]" || true
+          git commit -n -m "${{ steps.update-shields.outputs.commit_msg }} ↞ [auto-sync from \`adamlui/chatgpt-auto-refresh\`]" || true
           git push
