Replaced sync src in commit msgs w/ README descriptors

--- a/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
+++ b/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
@@ -132,15 +132,14 @@ jobs:
             else echo "Git clones shields already up-to-date" ; fi
           fi
 
-          # Define commit msg for push steps
+          # Define commit msg intro for push steps
           if [ "$users_updated" = true ] && [ "$clones_updated" = true ] ; then
             multi_shield_types_updated=true ; fi
-          commit_msg="Updated "
+          commit_msg_intro="Updated "
           [ "$users_updated" = true              ] && commit_msg+="usercount"
           [ "$multi_shield_types_updated" = true ] && commit_msg+="/"
           [ "$clones_updated" = true             ] && commit_msg+="clones"
-          commit_msg+=" shield counters in READMEs"
-          echo "commit_msg=$commit_msg" >> $GITHUB_OUTPUT # expose as output
+          echo "commit_msg_intro=$commit_msg_intro" >> $GITHUB_OUTPUT # expose as output
 
       - name: Sync / to adamlui/chatgpt-apps/chatgpt-auto-refresh/
         run: |
@@ -163,19 +162,19 @@ jobs:
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-refresh
           git add .
-          git commit -n -m "${{ steps.update-shields.outputs.commit_msg }}" || true
+          git commit -n -m "${{ steps.update-shields.outputs.commit_msg_intro }} in READMEs" || true
           git push
 
       - name: Push changes to adamlui/chatgpt-apps
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-apps
           git add .
-          git commit -n -m "${{ steps.update-shields.outputs.commit_msg }} ↞ [auto-sync from \`adamlui/chatgpt-auto-refresh\`]" || true
+          git commit -n -m "${{ steps.update-shields.outputs.commit_msg_intro }} in ChatGPT Auto Refresh READMEs" || true
           git push
 
       - name: Push changes to adamlui/userscripts
         run: |
           cd ${{ github.workspace }}/adamlui/userscripts
           git add .
-          git commit -n -m "${{ steps.update-shields.outputs.commit_msg }} ↞ [auto-sync from \`adamlui/chatgpt-auto-refresh\`]" || true
+          git commit -n -m "${{ steps.update-shields.outputs.commit_msg_intro }} in ChatGPT Auto Refresh READMEs" || true
           git push
