--- a/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
+++ b/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
@@ -139,6 +139,7 @@ jobs:
           [ "$users_updated" = true              ] && commit_msg+="usercount"
           [ "$multi_shield_types_updated" = true ] && commit_msg+="/"
           [ "$clones_updated" = true             ] && commit_msg+="clones"
+          commit_msg+=" shield counters"
           echo "commit_msg_intro=$commit_msg_intro" >> $GITHUB_OUTPUT # expose as output
 
       - name: Sync / to adamlui/chatgpt-apps/chatgpt-auto-refresh/
