--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -3,7 +3,7 @@ name: Sync (/ to adamlui/chatgpt-apps/chatgpt-auto-refresh/) && (/greasemonkey/ 
 on:
   push:
     branches: [main]
-    paths: ["**", "!.**"]
+    paths: ["**", "!.*", "!package*json", "!eslint.config*"]
 
 jobs:
   build:
