--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -1,4 +1,4 @@
-name: Sync (/ to adamlui/ai-apps/chatgpt-auto-refresh/) && (/greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-refresh/)
+name: Sync * to adamlui/ai-apps/chatgpt-auto-refresh/ && greasemonkey/* to adamlui/userscripts/chatgpt/chatgpt-auto-refresh/
 
 on:
   push:
