--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -12,8 +12,6 @@ jobs:
     env:
       GIT_AUTHOR_NAME: ${{ github.event.commits[0].author.name }}
       GIT_AUTHOR_EMAIL: ${{ github.event.commits[0].author.email }}
-      GIT_COMMITTER_NAME: kudo-sync-bot
-      GIT_COMMITTER_EMAIL: auto-sync@kudoai.com
 
     steps:
 
@@ -95,6 +93,13 @@ jobs:
           echo "ESCAPED_MSG<<EOF" >> $GITHUB_ENV
           echo "$COMMIT_MSG" | sed 's/`/\`/g' >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
+      
+      - name: Config committer
+        run: |
+          gpg --batch --import <(echo "${{ secrets.GPG_PRIVATE_KEY }}")
+          git config --global user.name "kudo-sync-bot"
+          git config --global user.email "auto-sync@kudoai.com"
+          git config --global user.signingkey  "${{ secrets.GPG_PRIVATE_ID }}"
 
       - name: Push changes to adamlui/chatgpt-auto-refresh
         run: |
