--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -102,19 +102,19 @@ jobs:
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-refresh
           git add .
-          git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from \`${{ steps.sync_docs.outputs.sync_src }}\`]" || true
+          git commit -S -n -m "$ESCAPED_MSG ↞ [auto-sync from \`${{ steps.sync_docs.outputs.sync_src }}\`]" || true
           git push
 
       - name: Push changes to adamlui/ai-apps
         run: |
           cd ${{ github.workspace }}/adamlui/ai-apps
           git add .
-          git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from \`adamlui/chatgpt-auto-refresh\`]" || true
+          git commit -S -n -m "$ESCAPED_MSG ↞ [auto-sync from \`adamlui/chatgpt-auto-refresh\`]" || true
           git push
 
       - name: Push changes to adamlui/userscripts
         run: |
           cd ${{ github.workspace }}/adamlui/userscripts
           git add .
-          git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from \`adamlui/chatgpt-auto-refresh\`]" || true
+          git commit -S -n -m "$ESCAPED_MSG ↞ [auto-sync from \`adamlui/chatgpt-auto-refresh\`]" || true
           git push
