Updated chatgpt-apps to ai-apps

--- a/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
+++ b/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
@@ -1,4 +1,4 @@
-name: Update usercount/clones shields in READMEs, sync to adamlui/chatgpt-apps + adamlui/userscripts
+name: Update usercount/clones shields in READMEs, sync to adamlui/ai-apps + adamlui/userscripts
 
 on:
   schedule:
@@ -16,12 +16,12 @@ jobs:
           repository: adamlui/chatgpt-auto-refresh
           path: adamlui/chatgpt-auto-refresh
 
-      - name: Checkout adamlui/chatgpt-apps
+      - name: Checkout adamlui/ai-apps
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.REPO_SYNC_PAT }}
-          repository: adamlui/chatgpt-apps
-          path: adamlui/chatgpt-apps
+          repository: adamlui/ai-apps
+          path: adamlui/ai-apps
 
       - name: Checkout adamlui/userscripts
         uses: actions/checkout@v4
@@ -142,11 +142,11 @@ jobs:
           commit_msg_intro+=" shield counters"
           echo "commit_msg_intro=$commit_msg_intro" >> $GITHUB_OUTPUT # expose as output
 
-      - name: Sync / to adamlui/chatgpt-apps/chatgpt-auto-refresh/
+      - name: Sync / to adamlui/ai-apps/chatgpt-auto-refresh/
         run: |
           rsync -avhr --delete --exclude={'.*','eslint*','package*json'} \
             ${{ github.workspace }}/adamlui/chatgpt-auto-refresh/ \
-            ${{ github.workspace }}/adamlui/chatgpt-apps/chatgpt-auto-refresh/
+            ${{ github.workspace }}/adamlui/ai-apps/chatgpt-auto-refresh/
 
       - name: Sync /greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-refresh/
         run: |
@@ -166,9 +166,9 @@ jobs:
           git commit -n -m "${{ steps.update-shields.outputs.commit_msg_intro }} in READMEs" || true
           git push
 
-      - name: Push changes to adamlui/chatgpt-apps
+      - name: Push changes to adamlui/ai-apps
         run: |
-          cd ${{ github.workspace }}/adamlui/chatgpt-apps
+          cd ${{ github.workspace }}/adamlui/ai-apps
           git add .
           git commit -n -m "${{ steps.update-shields.outputs.commit_msg_intro }} in ChatGPT Auto Refresh READMEs" || true
           git push
