--- a/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
+++ b/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   update-usercount-clones-shields:
     runs-on: ubuntu-latest
+    env:
+      TZ: PST8PDT
 
     steps:
       - name: Checkout adamlui/chatgpt-auto-refresh
