--- a/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
+++ b/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
@@ -1,11 +1,11 @@
-name: Update usercount/clones shields in READMEs, then sync to adamlui/ai-apps + adamlui/userscripts
+name: Update usercount shield in READMEs, then sync to adamlui/ai-apps + adamlui/userscripts
 
 on:
   schedule:
     - cron: "42 5 * * 0,2,4" # every Sun/Tue/Thu @ 6:23a
 
 jobs:
-  update-usercount-clones-shields:
+  update-usercount-shield:
     runs-on: ubuntu-latest
     env:
       TZ: PST8PDT
@@ -32,7 +32,7 @@ jobs:
           repository: adamlui/userscripts
           path: adamlui/userscripts
 
-      - name: Fetch/sum user + clone counts
+      - name: Fetch/sum user count
         id: get-stats
         run: |
           expand_num() { # expand nums abbreviated w/ 'k' or 'm' suffix to integers
@@ -79,34 +79,17 @@ jobs:
           gf_users=$(expand_num "$gf_users")
           echo "Greasy Fork users: $gf_users"
 
-          # Fetch/calculate git clone count
-          biweekly_clones=$(curl -sSL \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.REPO_SYNC_PAT }}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/adamlui/chatgpt-auto-refresh/traffic/clones" |
-            sed -n -E '0,/.*"count": ([0-9]+).*/ s//\1/p')
-          total_clones=$((biweekly_clones * 2))
-          echo "Biweekly git clones: $biweekly_clones"
-          echo -e "\n-----\nTotal monthly git clones: $total_clones\n-----\n"
-
-          # Format totals
+          # Format total
           formatted_total_users=$(format_total "$gf_users")
           echo "Formatted total users: $formatted_total_users"
-          formatted_total_clones=$(format_total "$total_clones")
-          echo "Formatted total monthly git clones: $formatted_total_clones"
 
-          # Expose as outputs for update step next
+          # Expose as output for update step next
           echo "total_users=$formatted_total_users" >> $GITHUB_OUTPUT
-          echo "total_clones=$formatted_total_clones" >> $GITHUB_OUTPUT
 
       - name: Update README shields
-        id: update-shields
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-refresh
-
           total_users="${{ steps.get-stats.outputs.total_users }}"
-          total_clones="${{ steps.get-stats.outputs.total_clones }}"
 
           # Update usercount shields
           if [ "$total_users" == "0" ] ; then echo "Error getting total usercount"
@@ -120,29 +103,6 @@ jobs:
             if [ "$users_updated" = true ] ; then echo "Usercount shields updated to $total_users"
             else echo "Usercount shields already up-to-date" ; fi
           fi
-
-          # Update git clones shield
-          if [ "$total_clones" == "0" ] ; then echo "Error getting total git clones"
-          else # perform update
-            for readme in $(find . -name "README.md") ; do
-              old_readme=$(<"$readme")
-              sed -i -E "s|(badge/[^-]+-)[0-9.,km+]+(/[^?]+\?logo=github)|\1$total_clones\2|gI" "$readme"
-              new_readme=$(<"$readme")
-              if [ "$old_readme" != "$new_readme" ] ; then clones_updated=true ; fi
-            done
-            if [ "$clones_updated" = true ] ; then echo "Git clones shields updated to $total_clones"
-            else echo "Git clones shields already up-to-date" ; fi
-          fi
-
-          # Define commit msg intro for push steps
-          if [ "$users_updated" = true ] && [ "$clones_updated" = true ] ; then
-            multi_shield_types_updated=true ; fi
-          commit_msg_intro="Updated "
-          [ "$users_updated" = true              ] && commit_msg_intro+="usercount"
-          [ "$multi_shield_types_updated" = true ] && commit_msg_intro+="/"
-          [ "$clones_updated" = true             ] && commit_msg_intro+="clones"
-          commit_msg_intro+=" shield counters"
-          echo "commit_msg_intro=$commit_msg_intro" >> $GITHUB_OUTPUT # expose as output
 
       - name: Sync ** to adamlui/ai-apps/chatgpt-auto-refresh/
         run: |
@@ -168,19 +128,19 @@ jobs:
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-refresh
           git add .
-          git commit -n -m "${{ steps.update-shields.outputs.commit_msg_intro }} in READMEs" || true
+          git commit -n -m "Updated usercount shield counters in READMEs" || true
           git push
 
       - name: Push changes to adamlui/ai-apps
         run: |
           cd ${{ github.workspace }}/adamlui/ai-apps
           git add .
-          git commit -n -m "${{ steps.update-shields.outputs.commit_msg_intro }} in ChatGPT Auto Refresh READMEs" || true
+          git commit -n -m "Updated usercount shield counters in ChatGPT Auto Refresh READMEs" || true
           git push
 
       - name: Push changes to adamlui/userscripts
         run: |
           cd ${{ github.workspace }}/adamlui/userscripts
           git add .
-          git commit -n -m "${{ steps.update-shields.outputs.commit_msg_intro }} in ChatGPT Auto Refresh READMEs" || true
+          git commit -n -m "Updated usercount shield counters in ChatGPT Auto Refresh READMEs" || true
           git push
