--- a/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
+++ b/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
@@ -90,8 +90,6 @@ jobs:
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-refresh
           total_users="${{ steps.get-stats.outputs.total_users }}"
-
-          # Update usercount shields
           if [ "$total_users" == "0" ] ; then echo "Error getting total usercount"
           else # perform update
             for readme in $(find . -name "README.md") ; do
@@ -103,20 +101,24 @@ jobs:
             if [ "$users_updated" = true ] ; then echo "Usercount shields updated to $total_users"
             else echo "Usercount shields already up-to-date" ; fi
           fi
+          if [ "$users_updated" = true ] ; then echo "users_updated=true" >> $GITHUB_ENV ; fi
 
       - name: Sync ** to adamlui/ai-apps/chatgpt-auto-refresh/
+        if: env.users_updated == 'true'
         run: |
           rsync -avhr --delete --exclude={'.*','eslint*','package*json'} \
             ${{ github.workspace }}/adamlui/chatgpt-auto-refresh/ \
             ${{ github.workspace }}/adamlui/ai-apps/chatgpt-auto-refresh/
 
       - name: Sync greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-refresh/
+        if: env.users_updated == 'true'
         run: |
           rsync -avhr --delete \
             ${{ github.workspace }}/adamlui/chatgpt-auto-refresh/greasemonkey/ \
             ${{ github.workspace }}/adamlui/userscripts/chatgpt/chatgpt-auto-refresh/
 
       - name: Config committer
+        if: env.users_updated == 'true'
         run: |
           gpg --batch --import <(echo "${{ secrets.GPG_PRIVATE_KEY }}")
           git config --global commit.gpgsign true
@@ -125,6 +127,7 @@ jobs:
           git config --global user.signingkey  "${{ secrets.GPG_PRIVATE_ID }}"
 
       - name: Push changes to adamlui/chatgpt-auto-refresh
+        if: env.users_updated == 'true'
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-refresh
           git add .
@@ -132,6 +135,7 @@ jobs:
           git push
 
       - name: Push changes to adamlui/ai-apps
+        if: env.users_updated == 'true'
         run: |
           cd ${{ github.workspace }}/adamlui/ai-apps
           git add .
@@ -139,6 +143,7 @@ jobs:
           git push
 
       - name: Push changes to adamlui/userscripts
+        if: env.users_updated == 'true'
         run: |
           cd ${{ github.workspace }}/adamlui/userscripts
           git add .
